Root cause fix (reverted previous commit and fixed real issue); scrollbars were being added (x and y) because entire container was capped at the size of the parent contextMenu object. By setting this to 100% w/h, it allows the menu to grow appropriately. You'll notice contextMenu already was restricting with calc(~'100% - @{usedUpChrome}')... I'm not sure why it needs width and max-width set.

--- a/less/contextMenu.less
+++ b/less/contextMenu.less
@@ -16,8 +16,11 @@
   }
   // This is a reasonable max height and also solves problems for bookmarks menu
   // and bookmarks overflow menu reaching down too low.
+  height: 100%;
+  width: 100%;
   @usedUpChrome: @navbarHeight + @bookmarksToolbarWithFaviconsHeight;
   max-height: calc(~'100% - @{usedUpChrome}');
+  overflow: auto;
   padding: 0px 0px;
   position: absolute;
   z-index: 350;
